test: Added new should play the manilha card against opponent test